cmake_minimum_required(VERSION 3.0.2)
project(Interview)

add_executable(ChildRunningUpStairsDynamicProgramming
  ChildRunningUpStairsDynamicProgramming.cpp
)
add_executable(GraphNodesConnected
  Graph.cpp
  GraphNodesConnected.cpp
)
add_executable(IsStringPerm IsStringPerm.cpp)
add_executable(IsStringUnique IsStringUnique.cpp)
add_executable(IsSubTreeBinaryTree IsSubTreeBinaryTree.cpp)
add_executable(LinkedListIsPalindrome LinkedListIsPalindrome.cpp)
add_executable(RemoveDupsLinkedList RemoveDupsLinkedList.cpp)
add_executable(SetIntersection SetIntersection.cpp)
add_executable(SortStack SortStack.cpp)
add_executable(UrlifyString UrlifyString.cpp)
